feat: complete crud product
